--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -253,7 +252,7 @@
                         <p class="pre-wrap lead">Électricien Auto-entrepreneur se fera un plaisir de faire vos travaux qu'il s'agit d'une maison neuve ou d'une rénovation.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead"> Devis gratuit n'hésité prendre contact.</p>
+                        <p class="pre-wrap lead"> Devis gratuit n'hésité à prendre contact.</p>
                     </div>
                 </div>
             </div>
@@ -326,6 +325,3 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
-=======
-hello
->>>>>>> parent of 8d2480f... Site intitial
