--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Book photo</a>
                         </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">A propos</a>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">À propos</a>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">CONTACT</a>
                         </li>
@@ -34,7 +34,7 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/flab71561.jpg" alt="">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">Robin l’Électricien</h1>
+                <h1 class="masthead-heading mb-0">Robin Élec</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -238,7 +238,7 @@
             <div class="container">
                 <!-- About Section Heading-->
                 <div class="text-center">
-                    <h2 class="page-section-heading d-inline-block text-white">A propos</h2>
+                    <h2 class="page-section-heading d-inline-block text-white">À propos</h2>
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
@@ -249,10 +249,10 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Électricien Auto-entrepreneur se fera un plaisir de faire vos travaux qu'il s'agit d'une maison neuve ou d'une rénovation.</p>
+                        <p class="pre-wrap lead">Robin électricien Auto-entrepreneur se fera un plaisir de faire vos travaux qu'il s'agit d'une maison neuve ou d'une rénovation.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead"> Devis gratuit n'hésité à prendre contact.</p>
+                        <p class="pre-wrap lead"> Devis gratuit. N'hésitez à prendre contact.</p>
                     </div>
                 </div>
             </div>
@@ -309,7 +309,7 @@
         </footer>
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white">
-            <div class="container"><small class="pre-wrap">Copyright © Your Website 2020</small></div>
+            <div class="container"><small class="pre-wrap"> </small></div>
         </section>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
