--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Robin électricien Auto-entrepreneur se fera un plaisir de faire vos travaux qu'il s'agit d'une maison neuve ou d'une rénovation.</p>
+                        <p class="pre-wrap lead">Robin électricien Auto-entrepreneur se fera un plaisir de faire vos travaux (Maison neuve; Rénovation; Dépannage.)</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
                         <p class="pre-wrap lead"> Devis gratuit. N'hésitez à prendre contact.</p>
